fix(back): add swagger
